--- a/SEGA.css
+++ b/SEGA.css
@@ -1,5 +1,6 @@
 /*
 Sega Gamepad Viewer skin by @zntmn twitch.tv/zantomun
+CSS fixed by BenInSweden
 Original CSS by @jayraydee
 Free for personal use and non-profit sharing!
 */
