--- a/SEGA.css
+++ b/SEGA.css
@@ -1,6 +1,6 @@
 /*
 Sega Gamepad Viewer skin by @zntmn twitch.tv/zantomun
-CSS fixed by BenInSweden
+CSS help from BenInSweden
 Original CSS by @jayraydee
 Free for personal use and non-profit sharing!
 */
@@ -54,40 +54,40 @@ Free for personal use and non-profit sharing!
 }
 .custom .bumper{
     width: 256px;
-    height: 420px;
-    left: 472px;
-    top: 162px;
+    height: 200px;
+    left: 501px;
+    top: 144px;
     background: url(CZ.png);
-    opacity: 0;
+    opacity: 1;
     background-repeat:no-repeat;
     position: absolute;
+    z-index:
 }
 .custom .bumper.right.pressed{
     opacity: 1;
-    width: 90px;
-    height: 80px;
-    background-position: -177px -272px; 
+    width: 170px;
+    height: 150px;
+    background-position: -150px -320px; 
     float: left;
     left: 650px;
-    top: 224px;
+    top: 220px;
 }
 .custom .bumper.left.pressed{
-    opacity: 1;
-    width: 62px;
-    height: 63px;
-    left: 612px;
-    top: 153px;
-    background-position: -132px -252px;
+    opacity:1;
+    width: 69px;
+    height: 68px;
+    left: 631px;
+    top: 151px;
+    background-position: -131px -251px;
     float: right;
+    z-index:1;
 }
-/* This is to size and position the containing div for the 
-
-and select buttons. */
+/* This is to size and position the containing div for the and select buttons. */
 .custom .{
     position: absolute;
     width: 205px;
     height: 19px;
-    top: 248px;
+    top: 48px;
     left: 290px;
     background-repeat:no-repeat;
 }
@@ -103,8 +103,9 @@ and select buttons. */
 .custom .back.pressed{
     /*background-position-y: -1px;*/
     top: 36px;
-    left: 72px;
-    width: 60px;
+    width: 200px;
+    left: 349px;
+    top: 265px;
     height: 35px;
     opacity: 1;
 }
@@ -117,8 +118,8 @@ and select buttons. */
 }
 .custom .start.pressed{
     position: absolute;
-    top: -24px;
-    left: 59px;
+    top: 197px;
+    left: 349px;
     width: 190px;
     opacity: 1;
     background-position-x: 0px;
@@ -179,9 +180,9 @@ and select buttons. */
 /* Dpad possitioning and sizing */
 .custom .dpad{
     position: absolute;
-    width: 250px;
-    height: 300px;
-    top: 193px;
+    width: 200px;
+    height: 200px;
+    top: 191px;
     left: 132px;
 }
 .custom .face{
@@ -198,8 +199,8 @@ and select buttons. */
     background-repeat:no-repeat;
 }
 .custom .face.down{
-    width: 29px;
-    height: 71px;
+    width: 70px;
+    height: 100px;
     left: 51px;
     top: 69px;
     background-position: -170px 0px;
@@ -214,44 +215,45 @@ and select buttons. */
     background-repeat:no-repeat;
 }
 .custom .face.right{
-    width: 71px;
-    height: 27px;
-    top: 57px;
-    left: 66px;
-    background-position: -100px -0px;
+    width: 0px;
+    height: 0px;
+    top: 58px;
+    left: 68px;
+    background-position: 0px -0px;
     background-repeat:no-repeat;
 }
 .custom .face.right.pressed{
-    width: 71px;
-    height: 27px;
-    top: 57px;
-    left: 65px;
+    width: 83px;
+    height: 190px;
+    top: -92px;
+    left: 52px;
     opacity: 1;
-    background-position: -100px -73px;
+    background-position: -125px -75px;
     background-repeat:no-repeat;
 }
 .custom .face.left.pressed{
-    width: 71px;
-    height: 27px;
-    top: 57px;
-    left: -5px;
-    background-position: -0px -73px;
+  width: 80px;
+    height: 190px;
+    top: -92px;
+    left: -30px;
+    opacity: 1;
+    background-position: 0px -75px;
     background-repeat:no-repeat;
 }
 .custom .face.up.pressed{
-    width: 29px;
-    height: 71px;
-    left: 51px;
-    top:2px;
-    background-position: -71px -73px;
+    width: 50px;
+    height: 250px;
+    left: 29px;
+    top:-148px;
+    background-position: -81px -73px;
     background-repeat:no-repeat;
 }
 .custom .face.down.pressed{ 
-    width: 29px;
-    height: 71px;
-    left: 51px;
-    top: 71px;
-    background-position: -170px -74px;
+   width: 50px;
+    height: 250px;
+    left: 31px;
+    top: -65px;
+    background-position: -205px -74px;
     background-repeat:no-repeat;
 }
 
