--- a/SEGA.css
+++ b/SEGA.css
@@ -2,6 +2,7 @@
 Sega Gamepad Viewer skin by @zntmn twitch.tv/zantomun
 CSS help from BenInSweden
 Original CSS by @jayraydee
+Thanks to cheekychunk
 Free for personal use and non-profit sharing!
 */
 /*BEGIN SEGA Controller Styling*/
